Sun Feb 14 06:04:22 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.cpp:
        * tools/odds_dissector/odds_plugin.cpp:

          Switched to glib model of managing exports to match other
          wireshark plugins.

        * tools/odds_dissector/odds_Export.h:

          Removed this file.

Sun Feb 14 05:45:06 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.mpc:

          Added verbatim clause to omit library prefix on gnuace.

Sun Feb 14 04:37:22 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.cpp:

          Renamed Message ID and Sub-Message ID fields to ID and Sub-ID,
          respectively.

Sun Feb 14 03:00:23 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.cpp:

          Corrected overly greedy search and replace error.

Sun Feb 14 02:55:16 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.cpp:
        * tools/odds_dissector/odds_plugin.cpp:

          Corrected minor nits; updated plugin version number to
          use DDS_VERSION.

Sat Feb 13 23:18:43 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/DataSampleHeader.cpp:

          Updated stream operators to provide output compatible with
          wireshark.

        * dds/DCPS/transport/multicast/ReliableSession.h:

          Moved SubMessageId enum to DataSampleHeader; we need a single
          place to maintain Sub-Message IDs.

        * tools/odds_dissector/odds_dissector.cpp:
        * tools/odds_dissector/odds_plugin.cpp:

          Finalized dissector plugin for wireshark.

Sat Feb 13 00:47:20 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.cpp:
